--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    compile 'com.google.code.gson:gson:2.7'
     compile project(':library')
 }
